--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,12 +1,60 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-05-10 17:17:53 +1000 
+%% Created for Martin Smith at 2017-09-05 14:43:14 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kelley2012transposable,
+	Author = {Kelley, David and Rinn, John},
+	Date-Added = {2017-09-05 04:43:07 +0000},
+	Date-Modified = {2017-09-05 04:43:07 +0000},
+	Journal = {Genome biology},
+	Number = {11},
+	Pages = {R107},
+	Publisher = {BioMed Central},
+	Title = {Transposable elements reveal a stem cell-specific class of long noncoding RNAs},
+	Volume = {13},
+	Year = {2012}}
+
+@article{kunarso2010transposable,
+	Author = {Kunarso, Galih and Chia, Na-Yu and Jeyakani, Justin and Hwang, Catalina and Lu, Xinyi and Chan, Yun-Shen and Ng, Huck-Hui and Bourque, Guillaume},
+	Date-Added = {2017-09-05 04:42:39 +0000},
+	Date-Modified = {2017-09-05 04:42:39 +0000},
+	Journal = {Nature genetics},
+	Number = {7},
+	Pages = {631--634},
+	Publisher = {Nature Research},
+	Title = {Transposable elements have rewired the core regulatory network of human embryonic stem cells},
+	Volume = {42},
+	Year = {2010}}
+
+@article{hezroni2015principles,
+	Author = {Hezroni, Hadas and Koppstein, David and Schwartz, Matthew G and Avrutin, Alexandra and Bartel, David P and Ulitsky, Igor},
+	Date-Added = {2017-09-05 04:42:13 +0000},
+	Date-Modified = {2017-09-05 04:42:13 +0000},
+	Journal = {Cell reports},
+	Number = {7},
+	Pages = {1110--1122},
+	Publisher = {Elsevier},
+	Title = {Principles of long noncoding RNA evolution derived from direct comparison of transcriptomes in 17 species},
+	Volume = {11},
+	Year = {2015}}
+
+@article{kapusta2013transposable,
+	Author = {Kapusta, Aurelie and Kronenberg, Zev and Lynch, Vincent J and Zhuo, Xiaoyu and Ramsay, LeeAnn and Bourque, Guillaume and Yandell, Mark and Feschotte, Cedric},
+	Date-Added = {2017-09-05 04:41:23 +0000},
+	Date-Modified = {2017-09-05 04:41:23 +0000},
+	Journal = {PLoS genetics},
+	Number = {4},
+	Pages = {e1003470},
+	Publisher = {Public Library of Science},
+	Title = {Transposable elements are major contributors to the origin, diversification, and regulation of vertebrate long noncoding RNAs},
+	Volume = {9},
+	Year = {2013}}
 
 @article{nawrocki2013infernal,
 	Author = {Nawrocki, Eric P and Eddy, Sean R},
@@ -67,12 +115,12 @@
 @article{washietl2005fast,
 	Author = {Washietl, Stefan and Hofacker, Ivo L and Stadler, Peter F},
 	Date-Added = {2017-05-06 10:41:10 +0000},
-	Date-Modified = {2017-05-06 10:41:10 +0000},
+	Date-Modified = {2017-09-05 03:40:20 +0000},
 	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
 	Number = {7},
 	Pages = {2454--2459},
 	Publisher = {National Acad Sciences},
-	Title = {Fast and reliable prediction of noncoding RNAs},
+	Title = {{Fast and reliable prediction of noncoding RNAs}},
 	Volume = {102},
 	Year = {2005}}
 
@@ -148,12 +196,12 @@
 @article{hogg2008structured,
 	Author = {Hogg, J Robert and Collins, Kathleen},
 	Date-Added = {2017-04-10 08:00:11 +0000},
-	Date-Modified = {2017-04-10 08:00:11 +0000},
+	Date-Modified = {2017-09-05 03:41:00 +0000},
 	Journal = {Current opinion in chemical biology},
 	Number = {6},
 	Pages = {684--689},
 	Publisher = {Elsevier},
-	Title = {Structured non-coding RNAs and the RNP Renaissance},
+	Title = {{Structured non-coding RNAs and the RNP Renaissance}},
 	Volume = {12},
 	Year = {2008}}
 
@@ -183,12 +231,12 @@
 @article{morris2014rise,
 	Author = {Morris, Kevin V and Mattick, John S},
 	Date-Added = {2017-04-10 07:56:10 +0000},
-	Date-Modified = {2017-04-10 07:56:10 +0000},
+	Date-Modified = {2017-09-05 03:40:41 +0000},
 	Journal = {Nature Reviews Genetics},
 	Number = {6},
 	Pages = {423--437},
 	Publisher = {Nature Research},
-	Title = {The rise of regulatory RNA},
+	Title = {{The rise of regulatory RNA}},
 	Volume = {15},
 	Year = {2014}}
 
@@ -276,12 +324,12 @@
 @article{spitale2015structural,
 	Author = {Spitale, Robert C and Flynn, Ryan A and Zhang, Qiangfeng Cliff and Crisalli, Pete and Lee, Byron and Jung, Jong-Wha and Kuchelmeister, Hannes Y and Batista, Pedro J and Torre, Eduardo A and Kool, Eric T and others},
 	Date-Added = {2017-04-07 03:05:25 +0000},
-	Date-Modified = {2017-04-07 03:05:25 +0000},
+	Date-Modified = {2017-09-05 03:40:33 +0000},
 	Journal = {Nature},
 	Number = {7544},
 	Pages = {486--490},
 	Publisher = {Nature Research},
-	Title = {Structural imprints in vivo decode RNA regulatory mechanisms},
+	Title = {{Structural imprints in vivo decode RNA regulatory mechanisms}},
 	Volume = {519},
 	Year = {2015}}
 
@@ -344,11 +392,11 @@
 @article{smith2013widespread,
 	Author = {Smith, Martin A and Gesell, Tanja and Stadler, Peter F and Mattick, John S},
 	Date-Added = {2016-06-14 03:21:06 +0000},
-	Date-Modified = {2016-06-14 03:21:06 +0000},
+	Date-Modified = {2017-09-05 03:40:50 +0000},
 	Journal = {Nucleic acids research},
 	Pages = {gkt596},
 	Publisher = {Oxford Univ Press},
-	Title = {Widespread purifying selection on RNA structure in mammals},
+	Title = {{Widespread purifying selection on RNA structure in mammals}},
 	Year = {2013}}
 
 @article{nawrocki2014rfam,
@@ -421,6 +469,7 @@ alignments for large families, the introduction of the Rfam Biomart
 as well as other user interface improvements. Rfam is available
 under the Creative Commons Zero license.},
 	Author = {Burge, S W and Daub, J and Eberhardt, R and Tate, J and Barquist, L and Nawrocki, E P and Eddy, S R and Gardner, P P and Bateman, A},
+	Date-Modified = {2017-09-05 03:34:04 +0000},
 	Doi = {10.1093/nar/gks1005},
 	File = {:media/data/phd/literature/Burge23125362.pdf:pdf},
 	Journal = {Nucleic Acids Res},
@@ -428,7 +477,7 @@ under the Creative Commons Zero license.},
 	Number = {Database issue},
 	Pages = {D226--32},
 	Pmid = {23125362},
-	Title = {{Rfam 11.0: 10 years of \{RNA\} families.}},
+	Title = {{Rfam 11.0: 10 years of RNA families.}},
 	Volume = {41},
 	Year = {2013},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/nar/gks1005}}
@@ -447,13 +496,14 @@ under the Creative Commons Zero license.},
 @article{Gardner15860779,
 	Abstract = {To date, few attempts have been made to benchmark the alignment algorithms upon nucleic acid sequences. Frequently, sophisticated PAM or BLOSUM like models are used to align proteins, yet equivalents are not considered for nucleic acids; instead, rather ad hoc models are generally favoured. Here, we systematically test the performance of existing alignment algorithms on structural RNAs. This work was aimed at achieving the following goals: (i) to determine conditions where it is appropriate to apply common sequence alignment methods to the structural RNA alignment problem. This indicates where and when researchers should consider augmenting the alignment process with auxiliary information, such as secondary structure and (ii) to determine which sequence alignment algorithms perform well under the broadest range of conditions. We find that sequence alignment alone, using the current algorithms, is generally inappropriate <50-60\% sequence identity. Second, we note that the probabilistic method ProAlign and the aging Clustal algorithms generally outperform other sequence-based algorithms, under the broadest range of applications.},
 	Author = {Gardner, P P and Wilm, A and Washietl, S},
+	Date-Modified = {2017-09-05 03:34:44 +0000},
 	Doi = {10.1093/nar/gki541},
 	File = {:media/data/phd/literature/Gardner15860779.pdf:pdf},
 	Journal = {Nucleic Acids Res},
 	Number = {8},
 	Pages = {2433--2439},
 	Pmid = {15860779},
-	Title = {{A benchmark of multiple sequence alignment programs upon structural \{RNAs\}.}},
+	Title = {{A benchmark of multiple sequence alignment programs upon structural RNAs.}},
 	Volume = {33},
 	Year = {2005},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/nar/gki541}}
@@ -477,6 +527,7 @@ under the Creative Commons Zero license.},
 @article{Heyne22689765,
 	Abstract = {MOTIVATION: Clustering according to sequence-structure similarity has now become a generally accepted scheme for ncRNA annotation. Its application to complete genomic sequences as well as whole transcriptomes is therefore desirable but hindered by extremely high computational costs. RESULTS: We present a novel linear-time, alignment-free method for comparing and clustering RNAs according to sequence and structure. The approach scales to datasets of hundreds of thousands of sequences. The quality of the retrieved clusters has been benchmarked against known ncRNA datasets and is comparable to state-of-the-art sequence-structure methods although achieving speedups of several orders of magnitude. A selection of applications aiming at the detection of novel structural ncRNAs are presented. Exemplarily, we predicted local structural elements specific to lincRNAs likely functionally associating involved transcripts to vital processes of the human nervous system. In total, we predicted 349 local structural RNA elements. AVAILABILITY: The GraphClust pipeline is available on request.},
 	Author = {Heyne, S and Costa, F and Rose, D and Backofen, R},
+	Date-Modified = {2017-09-05 03:34:16 +0000},
 	Doi = {10.1093/bioinformatics/bts224},
 	File = {:media/data/phd/literature/Heyne22689765.pdf:pdf},
 	Journal = {Bioinformatics},
@@ -484,7 +535,7 @@ under the Creative Commons Zero license.},
 	Number = {12},
 	Pages = {i224--32},
 	Pmid = {22689765},
-	Title = {{GraphClust: alignment-free structural clustering of local \{RNA\} secondary structures.}},
+	Title = {{GraphClust: alignment-free structural clustering of local RNA secondary structures.}},
 	Volume = {28},
 	Year = {2012},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/bts224}}
@@ -508,25 +559,27 @@ under the Creative Commons Zero license.},
 @article{Knudsen:Hein:RNA_secon_struc:1999,
 	Abstract = {MOTIVATION: Many computerized methods for RNA secondary structure prediction have been developed. Few of these methods, however, employ an evolutionary model, thus relevant information is often left out from the structure determination. This paper introduces a method which incorporates evolutionary history into RNA secondary structure prediction. The method reported here is based on stochastic context-free grammars (SCFGs) to give a prior probability distribution of structures. RESULTS: The phylogenetic tree relating the sequences can be found by maximum likelihood (ML) estimation from the model introduced here. The tree is shown to reveal information about the structure, due to mutation patterns. The inclusion of a prior distribution of RNA structures ensures good structure predictions even for a small number of related sequences. Prediction is carried out using maximum a posteriori estimation (MAP) estimation in a Bayesian approach. For small sequence sets, the method performs very well compared to current automated methods.},
 	Author = {Knudsen, B and Hein, J},
+	Date-Modified = {2017-09-05 03:35:49 +0000},
 	File = {:media/data/phd/literature/Knudsen10383470.pdf:pdf},
 	Journal = {Bioinformatics},
 	Number = {6},
 	Pages = {446--454},
 	Pmid = {10383470},
-	Title = {{\{RNA\} secondary structure prediction using stochastic context-free grammars and evolutionary history}},
+	Title = {{RNA secondary structure prediction using stochastic context-free grammars and evolutionary history}},
 	Volume = {15},
 	Year = {1999}}
 
 @article{McCaskill:1990,
 	Abstract = {A novel application of dynamic programming to the folding problem for RNA enables one to calculate the full equilibrium partition function for secondary structure and the probabilities of various substructures. In particular, both the partition function and the probabilities of all base pairs are computed by a recursive scheme of polynomial order N3 in the sequence length N. The temperature dependence of the partition function gives information about melting behavior for the secondary structure. The pair binding probabilities, the computation of which depends on the partition function, are visually summarized in a "box matrix" display and this provides a useful tool for examining the full ensemble of probable alternative equilibrium structures. The calculation of this ensemble representation allows a proper application and assessment of the predictive power of the secondary structure method, and yields important information on alternatives and intermediates in addition to local information about base pair opening and slippage. The results are illustrated for representative tRNA, 5S RNA, and self-replicating and self-splicing RNA molecules, and allow a direct comparison with enzymatic structure probes. The effect of changes in the thermodynamic parameters on the equilibrium ensemble provides a further sensitivity check to the predictions. ------------------------------ Remark: error in equation (7) - term for internal loops must be multiplied by Qb[h][l]},
 	Author = {McCaskill, J S},
+	Date-Modified = {2017-09-05 03:35:00 +0000},
 	Doi = {10.1002/bip.360290621},
 	File = {:media/data/phd/literature/McCaskill1695107.pdf:pdf},
 	Journal = {Biopolymers},
 	Number = {6-7},
 	Pages = {1105--1119},
 	Pmid = {1695107},
-	Title = {{The equilibrium partition function and base pair binding probabilities for \{RNA\} secondary structure}},
+	Title = {{The equilibrium partition function and base pair binding probabilities for RNA secondary structure}},
 	Volume = {29},
 	Year = {1990},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1002/bip.360290621}}
@@ -547,22 +600,24 @@ under the Creative Commons Zero license.},
 
 @article{sankoff85,
 	Author = {Sankoff, David},
+	Date-Modified = {2017-09-05 03:35:40 +0000},
 	File = {:media/data/phd/literature/sankoff85.pdf:pdf},
 	Journal = {SIAM J. Appl. Math.},
 	Pages = {810--825},
-	Title = {{Simultaneous solution of the \{RNA\} folding, alignment and protosequence problems.}},
+	Title = {{Simultaneous solution of the RNA folding, alignment and protosequence problems.}},
 	Volume = {45},
 	Year = {1985}}
 
 @article{Sato18647390,
 	Abstract = {BACKGROUND: Recent discoveries of a large variety of important roles for non-coding RNAs (ncRNAs) have been reported by numerous researchers. In order to analyze ncRNAs by kernel methods including support vector machines, we propose stem kernels as an extension of string kernels for measuring the similarities between two RNA sequences from the viewpoint of secondary structures. However, applying stem kernels directly to large data sets of ncRNAs is impractical due to their computational complexity. RESULTS: We have developed a new technique based on directed acyclic graphs (DAGs) derived from base-pairing probability matrices of RNA sequences that significantly increases the computation speed of stem kernels. Furthermore, we propose profile-profile stem kernels for multiple alignments of RNA sequences which utilize base-pairing probability matrices for multiple alignments instead of those for individual sequences. Our kernels outperformed the existing methods with respect to the detection of known ncRNAs and kernel hierarchical clustering. CONCLUSION: Stem kernels can be utilized as a reliable similarity measure of structural RNAs, and can be used in various kernel-based applications.},
 	Author = {Sato, K and Mituyama, T and Asai, K and Sakakibara, Y},
+	Date-Modified = {2017-09-05 03:34:28 +0000},
 	Doi = {10.1186/1471-2105-9-318},
 	File = {:media/data/phd/literature/Sato18647390.pdf:pdf},
 	Journal = {BMC Bioinformatics},
 	Pages = {318},
 	Pmid = {18647390},
-	Title = {{Directed acyclic graph kernels for structural \{RNA\} analysis.}},
+	Title = {{Directed acyclic graph kernels for structural RNA analysis.}},
 	Volume = {9},
 	Year = {2008},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1186/1471-2105-9-318}}
@@ -721,18 +776,9 @@ RNA sequences.},
 	Volume = {4},
 	Year = {2003},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1186/1471-2105-4-44}}
+
 @article{Middleton25234928,
-	author = {Middleton, S.A. and Kim, J.},
-	title = {NoFold: {RNA} structure clustering without folding or alignment.},
-	journal = {RNA},
-	volume = {20},
-	number = {11},
-	year = {2014},
-	month = {Nov},
-	pages = {1671-1683},
-	pmid = {25234928},
-	doi = {10.1261/rna.041913.113},
-	abstract = {Structures that recur across multiple different transcripts, called
+	Abstract = {Structures that recur across multiple different transcripts, called
 structure motifs, often perform a similar function-for example,
 recruiting a specific RNA-binding protein that then regulates
 translation, splicing, or subcellular localization. Identifying
@@ -758,18 +804,21 @@ We also perform a cross-validation analysis of the entire set
 of Rfam families, achieving an average sensitivity of 0.57. We
 apply NoFold to identify motifs enriched in dendritically localized
 transcripts and report 213 enriched motifs, including both known
-and novel structures.}
-}
+and novel structures.},
+	Author = {Middleton, S.A. and Kim, J.},
+	Doi = {10.1261/rna.041913.113},
+	Journal = {RNA},
+	Month = {Nov},
+	Number = {11},
+	Pages = {1671-1683},
+	Pmid = {25234928},
+	Title = {NoFold: {RNA} structure clustering without folding or alignment.},
+	Volume = {20},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1261/rna.041913.113}}
 
 @article{Miladi28334186,
-	author = {Miladi, M. and Junge, A. and Costa, F. and Seemann, S.E. and Hull Havgaard, J. and Gorodkin, J. and Backofen, R.},
-	title = {{RNAscClust}: clustering {RNA} sequences using structure conservation and graph based motifs.},
-	journal = {Bioinformatics},
-	year = {2017},
-	month = {Feb},
-	pmid = {28334186},
-	doi = {10.1093/bioinformatics/btx114},
-	abstract = {Motivation: Clustering RNA sequences with common secondary structure
+	Abstract = {Motivation: Clustering RNA sequences with common secondary structure
 is an essential step towards studying RNA function. Whereas structural
 RNA alignment strategies typically identify common structure for
 orthologous structured RNAs, clustering seeks to group paralogous
@@ -790,21 +839,18 @@ degree of compensatory base pair changes in the alignments. Availability:
 RNAscClust is available at \verb+http://www.bioinf.uni+-freiburg.de/Software/RNAscClust.
 Contact: gorodkin@rth.dk or backofen@informatik.uni-freiburg.de.
 Supplementary information: Supplementary data are available at
-Bioinformatics online.}
-}
+Bioinformatics online.},
+	Author = {Miladi, M. and Junge, A. and Costa, F. and Seemann, S.E. and Hull Havgaard, J. and Gorodkin, J. and Backofen, R.},
+	Doi = {10.1093/bioinformatics/btx114},
+	Journal = {Bioinformatics},
+	Month = {Feb},
+	Pmid = {28334186},
+	Title = {{RNAscClust}: clustering {RNA} sequences using structure conservation and graph based motifs.},
+	Year = {2017},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/btx114}}
 
 @article{Roshan16954142,
-	author = {Roshan, U. and Livesay, D.R.},
-	title = {Probalign: multiple sequence alignment using partition function posterior probabilities.},
-	journal = {Bioinformatics},
-	volume = {22},
-	number = {22},
-	year = {2006},
-	month = {Nov},
-	pages = {2715-2721},
-	pmid = {16954142},
-	doi = {10.1093/bioinformatics/btl472},
-	abstract = {MOTIVATION: The maximum expected accuracy optimization criterion
+	Abstract = {MOTIVATION: The maximum expected accuracy optimization criterion
 for multiple sequence alignment uses pairwise posterior probabilities
 of residues to align sequences. The partition function methodology
 is one way of estimating these probabilities. Here, we combine
@@ -827,20 +873,21 @@ than the other three methods when standard deviation of length
 is >300 and 400, respectively. AVAILABILITY: Open source code
 implementing Probalign as well as for producing the simulated
 data, and all real and simulated data are freely available from
-\verb+http://www.cs.njit.edu/usman/probalign+}
-}
+\verb+http://www.cs.njit.edu/usman/probalign+},
+	Author = {Roshan, U. and Livesay, D.R.},
+	Doi = {10.1093/bioinformatics/btl472},
+	Journal = {Bioinformatics},
+	Month = {Nov},
+	Number = {22},
+	Pages = {2715-2721},
+	Pmid = {16954142},
+	Title = {Probalign: multiple sequence alignment using partition function posterior probabilities.},
+	Volume = {22},
+	Year = {2006},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/btl472}}
 
 @article{Lorenz22115189,
-	author = {Lorenz, R. and Bernhart, S.H. and Honer Zu Siederdissen, C. and Tafer, H. and Flamm, C. and Stadler, P.F. and Hofacker, I.L.},
-	title = {{ViennaRNA} Package 2.0.},
-	journal = {Algorithms Mol Biol},
-	volume = {6},
-	year = {2011},
-	month = {Nov},
-	pages = {26},
-	pmid = {22115189},
-	doi = {10.1186/1748-7188-6-26},
-	abstract = {BACKGROUND: Secondary structure forms an important intermediate
+	Abstract = {BACKGROUND: Secondary structure forms an important intermediate
 level of description of nucleic acids that encapsulates the dominating
 part of the folding energy, is often well conserved in evolution,
 and is routinely used as a basis to explain experimental findings.
@@ -862,21 +909,20 @@ structures, and support for input in fasta format. Updates were
 implemented without compromising the computational efficiency
 of the core algorithms and ensuring compatibility with earlier
 versions. CONCLUSIONS: The ViennaRNA Package  2.0, supporting
-concurrent computations via OpenMP, can be downloaded from \verb+http://www.tbi.univie.ac.at/RNA.+}
-}
+concurrent computations via OpenMP, can be downloaded from \verb+http://www.tbi.univie.ac.at/RNA.+},
+	Author = {Lorenz, R. and Bernhart, S.H. and Honer Zu Siederdissen, C. and Tafer, H. and Flamm, C. and Stadler, P.F. and Hofacker, I.L.},
+	Doi = {10.1186/1748-7188-6-26},
+	Journal = {Algorithms Mol Biol},
+	Month = {Nov},
+	Pages = {26},
+	Pmid = {22115189},
+	Title = {{ViennaRNA} Package 2.0.},
+	Volume = {6},
+	Year = {2011},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1186/1748-7188-6-26}}
 
 @article{Havgaard17937495,
-	author = {Havgaard, J.H. and Torarinsson, E. and Gorodkin, J.},
-	title = {Fast pairwise structural {RNA} alignments by pruning of the dynamical programming matrix.},
-	journal = {PLoS Comput Biol},
-	volume = {3},
-	number = {10},
-	year = {2007},
-	month = {Oct},
-	pages = {1896-1908},
-	pmid = {17937495},
-	doi = {10.1371/journal.pcbi.0030193},
-	abstract = {It has become clear that noncoding RNAs (ncRNA) play important
+	Abstract = {It has become clear that noncoding RNAs (ncRNA) play important
 roles in cells, and emerging studies indicate that there might
 be a large number of unknown ncRNAs in mammalian genomes. There
 exist computational methods that can be used to search for ncRNAs
@@ -904,21 +950,21 @@ has also been updated with a better memory implementation and
 an improved energy model. With these improvements in the algorithm,
 the FOLDALIGN software package provides the  molecular biologist
 with an efficient and user-friendly tool for searching for new
-ncRNAs. The software package is available for download at \verb+http://foldalign.ku.dk+.}
-}
+ncRNAs. The software package is available for download at \verb+http://foldalign.ku.dk+.},
+	Author = {Havgaard, J.H. and Torarinsson, E. and Gorodkin, J.},
+	Doi = {10.1371/journal.pcbi.0030193},
+	Journal = {PLoS Comput Biol},
+	Month = {Oct},
+	Number = {10},
+	Pages = {1896-1908},
+	Pmid = {17937495},
+	Title = {Fast pairwise structural {RNA} alignments by pruning of the dynamical programming matrix.},
+	Volume = {3},
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1371/journal.pcbi.0030193}}
 
 @article{Sundfeld26704597,
-	author = {Sundfeld, D. and Havgaard, J.H. and de Melo, A.C. and Gorodkin, J.},
-	title = {Foldalign 2.5: multithreaded implementation for pairwise structural {RNA} alignment.},
-	journal = {Bioinformatics},
-	volume = {32},
-	number = {8},
-	year = {2016},
-	month = {Apr},
-	pages = {1238-1240},
-	pmid = {26704597},
-	doi = {10.1093/bioinformatics/btv748},
-	abstract = {MOTIVATION: Structured RNAs can be hard to search for as they
+	Abstract = {MOTIVATION: Structured RNAs can be hard to search for as they
 often are not well  conserved in their primary structure and are
 local in their genomic or transcriptomic context. Thus, the need
 for tools which in particular can make local structural alignments
@@ -933,5 +979,15 @@ in the range 2000-6000 nucleotides improve execution up to a factor
 of five. AVAILABILITY AND IMPLEMENTATION: The Foldalign software
 and the web server are available at \verb+http://rth.dk/resources/foldalign+
 CONTACT: gorodkin@rth.dk SUPPLEMENTARY INFORMATION: Supplementary
-data are available at Bioinformatics online.}
-}
+data are available at Bioinformatics online.},
+	Author = {Sundfeld, D. and Havgaard, J.H. and de Melo, A.C. and Gorodkin, J.},
+	Doi = {10.1093/bioinformatics/btv748},
+	Journal = {Bioinformatics},
+	Month = {Apr},
+	Number = {8},
+	Pages = {1238-1240},
+	Pmid = {26704597},
+	Title = {Foldalign 2.5: multithreaded implementation for pairwise structural {RNA} alignment.},
+	Volume = {32},
+	Year = {2016},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/btv748}}
